# Cmake-Study

./: README.md
Basic02(Libraries)/: CMakeLists.txt  PrintHello.cpp  PrintHello.hpp  main.cpp
Basic02_recap/: CMakeLists.txt  Funct.cpp  Funct.hpp  main.cpp
Basics/: CMakeLists.txt  main.cpp
Basics_03_subDirectories/: CMakeLists.txt  main.cpp
Basics_03_subDirectories/Libraries/: CMakeLists.txt
Basics_03_subDirectories/Libraries/FunctLibrary/Src/: Hello.cpp  Hello.hpp
C_Make_FromOfficialDoc/Cxx Standard/: CMakeLists.txt  main.cpp
C_Make_FromOfficialDoc/Cxx Standard/SourceFiles/: CMakeLists.txt  someFunc.cpp  someFunc.hpp
C_Make_FromOfficialDoc/Library_advance/: CMakeLists.txt  Config.h.in  main.cpp
C_Make_FromOfficialDoc/Library_advance/includes/: CMakeLists.txt  someFunc.cpp  someFunc.hpp
C_Make_FromOfficialDoc/Version/: CMakeLists.txt  Config.h.in  main.cpp
